--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_pinelab_itmska
-description: "A new Flutter project."
+name: itmska_epay
+description: "A smart ticketing and e-payment solution for Karnataka temples."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
